4단계 - 로또(수동) (#2780)
* docs: step4 기능 요구사항 추가

* feat: 구매 가능 로또의 개수가 0개일 경우의 예외 처리

* feat: InputView 수동 로또 입력 로직 추가, Customer 로또 구매 로직 변경

* refactor: 메서드명 빌더와 조정자로 분리, 변수명 명확하게 변경

* refactor: LotteryNumber에 정적 팩토리 메서드 도입

* refactor: LotteryNumber 정적 팩토리 메서드에서 인스턴스 캐싱 하도록 변경

* refactor: Lottery에서 인스턴스 변수를 Set 자료구조로 변경하여 중복 validation 로직 제거

* fix: ResultView 에서 구매한 로또 번호 출력 시 정렬되도록 수정

* test: 로또 번호가 6개가 아닐 경우에 대한 테스트 추가

* test: 테스트 메서드 이름 개선